In PDF viewer, kill form focus when window loses focus.

Bug: 665554
Change-Id: I96b716d38a51c13a5d94595c2b568f06471a33aa
Reviewed-on: https://chromium-review.googlesource.com/774980
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517190}
Former-commit-id: 7259b50e35328ecbf4f3b8966e5817a1cfab9952